[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "erdb"
description = "parse ELDEN RING files into JSON"
authors = [{name = "Filip Tomaszewski", email = "phil25@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "Pillow >= 9.2",
    "deepdiff >= 6.2",
    "requests >= 2.28",
    "fastapi >= 0.87",
    "fastapi-versioning >= 0.10",
    "uvicorn >= 0.19",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest >= 7.1"
]

[project.urls]
Home = "https://github.com/EldenRingDatabase/erdb"

[project.scripts]
erdb = "erdb.main.cli:entrypoint"

[tool.mypy]
plugins = "pydantic.mypy"