[metadata]
name = erdb
description = parse ELDEN RING files into JSON
author = Filip Tomaszewski
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    erdb
install_requires =
    jsonschema>=4.5
    Pillow>=9.2
    deepdiff>=6.2
    requests>=2.28
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1

[options.package_data]
erdb = py.typed, data

[options.entry_points]
console_scripts =
    erdb=erdb.main.cli:entrypoint